src/objects/Classification__c.object
<CustomObject>
    <fields>
        <fullName>AccountAcountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計</label>
        <referenceTo>AccountAcount__c</referenceTo>
        <relationshipLabel>仕訳</relationshipLabel>
        <relationshipName>AccountAcountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>銀行名</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>仕訳</relationshipLabel>
        <relationshipName>BankName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BookingName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>予約名</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>仕訳</relationshipLabel>
        <relationshipName>BookingName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelRate__c</fullName>
        <label>キャンセル率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CertificateNo__c</fullName>
        <label>証第号</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeTypeLst__c</fullName>
        <label>手数料種別（システム用）</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>手数料</fullName>
                    <default>true</default>
                    <label>手数料</label>
                </value>
                <value>
                    <fullName>事前決済</fullName>
                </value>
                <value>
                    <fullName>キャンセル料</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>小切手・手形番号</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditDepartment__c</fullName>
        <label>貸方部門</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditName__c</fullName>
        <label>貸方勘定科目</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>貸方科目</label>
        <referenceTo>KanjoKamoku__c</referenceTo>
        <relationshipLabel>仕訳 (貸方科目)</relationshipLabel>
        <relationshipName>CreditRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditSubName__c</fullName>
        <label>貸方補助科目</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditTaxKbn__c</fullName>
        <label>貸方税区分</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitDepartment__c</fullName>
        <label>借方部門</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitName__c</fullName>
        <label>借方勘定科目</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>借方科目</label>
        <referenceTo>KanjoKamoku__c</referenceTo>
        <relationshipLabel>仕訳</relationshipLabel>
        <relationshipName>DebitRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DebitSubName__c</fullName>
        <label>借方補助科目</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitTaxAmount__c</fullName>
        <label>借方税額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DebitTaxKbn__c</fullName>
        <label>借方税区分</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>摘要</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <description>データ作成元「画面から、APEXから分けている」</description>
        <label>発生源</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>画面</fullName>
                    <default>true</default>
                    <label>画面</label>
                </value>
                <value>
                    <fullName>CARD手数料</fullName>
                </value>
                <value>
                    <fullName>AGT販売手数料</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KariCD__c</fullName>
        <formula>DebitRef__r.KanjocodeCode__c</formula>
        <label>借方科目CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KashikataCD__c</fullName>
        <formula>CreditRef__r.KanjocodeCode__c</formula>
        <label>貸方科目CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseDay__c</fullName>
        <label>仕入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RsvAccountRef__c</fullName>
        <label>売上</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>仕訳</relationshipLabel>
        <relationshipName>RsvAccountRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesAmount__c</fullName>
        <label>取引金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesDotCom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先名</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>仕訳 (取引先名)</relationshipLabel>
        <relationshipName>SalesDotCom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrgAmount__c</fullName>
        <label>計算元金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesRate__c</fullName>
        <label>手数料レート</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>仕訳</relationshipLabel>
        <relationshipName>ClassShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SlipNo__c</fullName>
        <label>伝票番号</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>伝票ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>起票</fullName>
                    <default>true</default>
                    <label>起票</label>
                </value>
                <value>
                    <fullName>却下</fullName>
                </value>
                <value>
                    <fullName>承認</fullName>
                </value>
                <value>
                    <fullName>監査</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoucherMonthCal__c</fullName>
        <formula>LEFT(Text(Voucher__c), 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>伝票日付本月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher__c</fullName>
        <label>伝票日付</label>
        <type>Date</type>
    </fields>
    <label>仕訳</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RsvAccountRef__c</columns>
        <columns>SalesOrgAmount__c</columns>
        <columns>SalesAmount__c</columns>
        <columns>DebitRef__c</columns>
        <columns>DebitName__c</columns>
        <columns>DebitTaxKbn__c</columns>
        <columns>DebitDepartment__c</columns>
        <columns>DebitSubName__c</columns>
        <columns>SalesDotCom__c</columns>
        <columns>Description__c</columns>
        <columns>ShopInfoRef__c</columns>
        <columns>EventSource__c</columns>
        <columns>SalesRate__c</columns>
        <columns>CancelRate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>伝票番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>